--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
 <h1>Black Market Animalia</h1>
 
 <body>
+    <!--Each p element is housing a header for each of the 
+    main components of the website-->
     <p>
         <h2>What we do.</h2>
+        <iframe  
+            allow="autoplay" width="720" height = "420" src="https://www.youtube.com/embed/biFsTACMSr4"frameborder="0" allowfullscreen alt="This is a video of our President giving important details about our business.">
+        </iframe>
 
+        <p id="Descriptions"></p>
    </p>  
 
    <br>
