Implemented backgrounds for head titles. Implemented icon image for more selection.

--- a/index.html
+++ b/index.html
@@ -6,21 +6,29 @@
     <link href="Illicit.css" rel="stylesheet">
 </head>
 
-<h1>Black Market Animalia</h1>
+<span >
+    <img src="More.png" width="50" height = 50 >
+    <h1>Black Market Animalia</h1>
+</span>
 
+<br>
+<p>
+    Enjoy elite access.
+</p>
 <body>
     <!--Each p element is housing a header for each of the 
     main components of the website-->
     <p>
         <h2>What we do.</h2>
-        <iframe  
-            allow="autoplay" width="720" height = "420" src="https://www.youtube.com/embed/biFsTACMSr4"frameborder="0" allowfullscreen alt="This is a video of our President giving important details about our business.">
+        <iframe   
+             allow="autoplay" width="720" height = "420" src="https://www.youtube.com/embed/biFsTACMSr4"frameborder="0" allowfullscreen alt="This is a video of our President giving important details about our business.">
         </iframe>
 
-        <p id="Descriptions"></p>
+        <p id="Descriptions">Welcome</p>
    </p>  
 
    <br>
+   
     
    <p>
     <h2>Explore our Supplies</h1>
