I compelted the BMP html and added dropdown menu

--- a/index.html
+++ b/index.html
@@ -2,12 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Anonymous Creatures</title>
+    <title>Black Market Animalia</title>
     <link href="Illicit.css" rel="stylesheet">
+
+    
 </head>
 
 <span >
-    <img src="More.png" width="50" height = 50 >
+    <div class="dropdown">
+        <div class="background-box"></div>
+        <img src="More.png" width="50" height="50" alt="Dropdown Menu" />
+        <div class="dropdown-content">
+            <a href="">What we do</a>
+            <a href="#">Explore our Supplies</a>
+            <a href="#">View our Stock</a>
+            <a href="BMP.html">Visit Black Market Plantae</a>
+        </div>
+    </div>
     <h1>Black Market Animalia</h1>
 </span>
 
@@ -59,7 +70,7 @@
 <footer>
     <a href="">TOP</a>
     <p></p>
-    <a href="Seizure.jpg">Black Market Plantae</p>
+    <a href="BMP.html">Black Market Plantae</p>
 </footer>
 
 </html>
