Added buttons to the images and baseline for Marketplace vendor

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <div class="background-box"></div>
         <img src="More.png" width="50" height="50" alt="Dropdown Menu" />
         <div class="dropdown-content">
-            <a href="">What we do</a>
-            <a href="#">Explore our Supplies</a>
-            <a href="#">View our Stock</a>
+            <a href="#Whatwedo">What we do</a>
+            <a href="#Explore">Explore our Supplies</a>
+            <a href="BlackMarketStock.html">View our Stock</a>
             <a href="BMP.html">Visit Black Market Plantae</a>
         </div>
     </div>
@@ -30,7 +30,7 @@
     <!--Each p element is housing a header for each of the 
     main components of the website-->
     <p>
-        <h2>What we do.</h2>
+        <h2 id="Whatwedo">What we do.</h2>
         <iframe   
              allow="autoplay" width="720" height = "420" src="https://www.youtube.com/embed/biFsTACMSr4"frameborder="0" allowfullscreen alt="This is a video of our President giving important details about our business.">
         </iframe>
@@ -42,23 +42,31 @@
    
     
    <p>
-    <h2>Explore our Supplies</h1>
+    <h2 id="Explore">Explore our Supplies</h1>
     <div id="grid-container">
         <div class="item">
-            <p>Genetically Modified</p> 
-            <img src="Joker.jpg" alt="DoGo Image">
+            <a href="BlackMarketStock.html">
+                <p>Genetically Modified</p> 
+                <img src="GeneticEngineering.jpg" alt="Button for viewing Genetic Creations">
+            </a>
         </div>
         <div class="item">
-            <p>Alien</p> 
-            <img src="Joker.jpg" alt="Molozer Image">
+            <a href="BlackMarketStock.html">
+                <p>Alien</p> 
+                <img src="Alien1.jpg" alt="Button for viewing Alien Animals">
+            </a>
         </div>
         <div class="item">
-            <p>Stolen</p> 
-            <img src="Joker.jpg" alt="Smithers Image">
+            <a href="BlackMarketStock.html">
+                <p>Stolen</p> 
+                <img src="Stolen.jpg" alt="Button for viewing Stolen Animals">
+            </a>
         </div>
         <div class="item">
-            <p>Personal Creations</p> 
-            <img src="Joker.jpg" alt="Rondeo Image">
+            <a href="BlackMarketStock.html">
+                <p>Extinct</p> 
+                <img src="Extinct.jpg" alt="Button for viewing Extinct Animals">
+            </a>
         </div>
 
 
