--- a/BMP.html
+++ b/BMP.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Black Market Plantae</title>
     <style>
-        /* CSS to make the image cover the entire page */
+    
         body, html {
             margin: 0;
             
@@ -17,7 +17,7 @@
         img {
             width: 100%;
             height: 100%;
-            object-fit: contain; /* Ensures the image covers the area without distortion */
+            object-fit: contain; 
         }
     </style>
 </head>
