--- a/BlackMarketStock.html
+++ b/BlackMarketStock.html
@@ -6,7 +6,18 @@
         <link href="Illicit.css" rel="stylesheet">
     </head>
     <span>
-    
+            <div class="dropdown">
+                <div class="background-box"></div>
+                <img src="More.png" width="50" height="50" alt="Dropdown Menu" />
+                <div class="dropdown-content">
+                    <a href="index.html">Back to Black Market Homepage</a>
+                    <a href="#GenMod">Genetically Modified</a>
+                    <a href="#Alien">Aliens</a>
+                    <a href="#Stolen">Stolen Animals</a>
+                    <a href="#Exctinct">Exctinct Animals</a>
+                    <a href="BMP.html">Visit Black Market Plantae</a>
+                </div>
+            </div>
         <h1>Black Market Stock</h1>
 
     </span>
@@ -19,30 +30,48 @@
             <h2><!--Title here--></h2>
             <div>
                 <div class="item">
-                        <p>Genetically Modified</p> 
+                        <p id="GenMod">Genetically Modified</p> 
                         <img src="GeneticEngineering.jpg" alt="Button for viewing Genetic Creations">
-                        <div class="grid-container">
-                            <h2></h2>
-                            <div>
-                                <img src="Joker.jpg" alt = "generated picture 1">
-                                <p>Price: 12 Btc</p>
-                                <p>This animal is crazy.</p>
-                                <img src="Joker.jpg" alt = "generated picture 2">
-                                <img src="Joker.jpg" alt = "generated picture 3">
-                                <img src="Joker.jpg" alt = "generated picture 4">
-                            </div>
+                        <div>
+                            <h2 style="width:650px"></h2>
+                        </div>
+
+                        <div class="grid-container-store">    
+                                <div class="item">
+                                    <img src="Joker.jpg" alt = "generated picture 1" aria-colspan="1">
+                                    <p class="storeP">Price: 12 Btc</p>
+                                    <p class="storeP">This animal is crazy.</p>
+                                </div>
+
+                                <div class="item">
+                                    <img src="Joker.jpg" alt = "generated picture 2">
+                                    <p class="storeP">Price: 14 Btc</p>
+                                    <p class="storeP">This animal is crazy.</p>
+                                </div>
+
+                                <div class="item">
+                                    <img src="Joker.jpg" alt = "generated picture 3">
+                                    <p class="storeP">Price: 12 Eth</p>
+                                    <p class="storeP">This animal is crazy.</p>
+                                </div>
+
+                                <div class="item">
+                                    <img src="Joker.jpg" alt = "generated picture 4">
+                                    <p class="storeP">Price: 2 Btc</p>
+                                    <p class="storeP">This animal is crazy.</p>
+                                </div>
                         </div>
                 </div>
                 <div class="item">
-                        <p>Alien</p> 
+                        <p id="Alien">Alien</p> 
                         <img src="Alien1.jpg" alt="Button for viewing Alien Animals">
                 </div>
                 <div class="item">
-                    <p>Stolen</p> 
+                    <p id="Stolen">Stolen</p> 
                     <img src="Stolen.jpg" alt="Button for viewing Stolen Animals">
                 </div>
                 <div class="item">
-                        <p>Extinct</p> 
+                        <p id="Extinct">Extinct</p> 
                         <img src="Extinct.jpg" alt="Button for viewing Extinct Animals">
                 </div>
         
@@ -55,6 +84,7 @@
 
 
     <footer>
+        <a href="">TOP</a>
         <p>Secured by Animalia Marketplace</p>
     </footer>
 
