--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="More.png" width="50" height="50" alt="Dropdown Menu" />
         <div class="dropdown-content">
             <a href="#Whatwedo">What we do</a>
-            <a href="#Explore">Explore our Supplies</a>
+            <a href="#Explore">What we sell</a>
             <a href="BlackMarketStock.html">View our Stock</a>
             <a href="BMP.html">Visit Black Market Plantae</a>
         </div>
@@ -42,7 +42,7 @@
    
     
    <p>
-    <h2 id="Explore">Explore our Supplies</h1>
+    <h2 id="Explore">What we sell</h1>
     <div id="grid-container">
         <div class="item">
             <a href="BlackMarketStock.html">
