added some more descriptions in index

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div class="dropdown-content">
             <a href="#Whatwedo">What we do</a>
             <a href="#Explore">What we sell</a>
+            <a href="#Howwedo">How we do it</a>
             <a href="BlackMarketStock.html">View our Stock</a>
             <a href="BMP.html">Visit Black Market Plantae</a>
         </div>
@@ -30,12 +31,12 @@
     <!--Each p element is housing a header for each of the 
     main components of the website-->
     <p>
-        <h2 id="Whatwedo">What we do.</h2>
+        <h2 id="Whatwedo">What we do</h2>
         <iframe   
              allow="autoplay" width="720" height = "420" src="https://www.youtube.com/embed/biFsTACMSr4"frameborder="0" allowfullscreen alt="This is a video of our President giving important details about our business.">
         </iframe>
 
-        <p id="Descriptions">Welcome</p>
+        <p id="Descriptions">Welcome, with backings from corrupt governments we bring you Black Market Animalia!</p>
    </p>  
 
    <br>
@@ -72,6 +73,20 @@
 
 
     </div>
+</p>
+
+<p>
+    <h2 id="Howwedo">How we do it</h2>
+    <p>
+        In order to maintain our elite reputation, we ensure that our supplies are 1st class and that our delivery methods are always 2 steps ahead of the government.  We obtain our supplies from several trusted 3rd party sources. This ensures that supply line takedowns will not affect our business.
+    </p>
+</p>
+
+<p>
+    <h2 id="Whereweare">Where we are</h2>
+    <p>
+        We are everywhere and nowhere, we are and we aren't. 
+    </p>
 </p>
 </body>
 
