--- a/BlackMarketStock.html
+++ b/BlackMarketStock.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <title>Black Market Animalia Stock</title>
         <link href="Illicit.css" rel="stylesheet">
+        <script src="blackMarketScipts.js" defer></script>
+
     </head>
     <span>
             <div class="dropdown">
@@ -35,15 +37,16 @@
                         <div>
                             <h2 style="width:650px"></h2>
                         </div>
-
+                        <button id="generateButton">Generate Image</button>
+                        
                         <div class="grid-container-store">    
                                 <div class="item">
-                                    <img src="Joker.jpg" alt = "generated picture 1" aria-colspan="1">
+                                    <img id ="Joker.jpg" src="Joker.jpg" alt = "generated picture 1" aria-colspan="1">
                                     <p class="storeP">Price: 12 Btc</p>
                                     <p class="storeP">This animal is crazy.</p>
                                 </div>
 
-                                <div class="item">
+                                <div class="item" >
                                     <img src="Joker.jpg" alt = "generated picture 2">
                                     <p class="storeP">Price: 14 Btc</p>
                                     <p class="storeP">This animal is crazy.</p>
@@ -55,10 +58,10 @@
                                     <p class="storeP">This animal is crazy.</p>
                                 </div>
 
-                                <div class="item">
-                                    <img src="Joker.jpg" alt = "generated picture 4">
+                                <div class="item" style="display: none;">
+                                    <img id="generated1" src="" alt = "generated picture 4" style="display: none;">
                                     <p class="storeP">Price: 2 Btc</p>
-                                    <p class="storeP">This animal is crazy.</p>
+                                    <p id="generatedText1" class="storeP">This animal is crazy.</p>
                                 </div>
                         </div>
                 </div>
