repositioned the load more button

--- a/BlackMarketStock.html
+++ b/BlackMarketStock.html
@@ -37,7 +37,6 @@
                         <div>
                             <h2 style="width:650px"></h2>
                         </div>
-                        <button id="generateButton">Generate Image</button>
                         
                         <div class="grid-container-store">    
                                 <div class="item">
@@ -57,9 +56,14 @@
                                     <p class="storeP">Price: 12 Eth</p>
                                     <p class="storeP">This animal is crazy.</p>
                                 </div>
+                                <div class="item">
+                                    <!--Change id to generateButton1 to work-->
+                                    <button id="generateButton" style = "width:200px; height:50px; color: black; background-color: gray; display: inline; font-size: large;" >Load More</button>
 
+                                    
+                                </div>
                                 <div class="item" style="display: none;">
-                                    <img id="generated1" src="" alt = "generated picture 4" style="display: none;">
+                                    <img id="generated1" src="" alt = "generated picture 4" style="display: fixed;">
                                     <p class="storeP">Price: 2 Btc</p>
                                     <p id="generatedText1" class="storeP">This animal is crazy.</p>
                                 </div>
