Added Better Commentation

--- a/BMP.html
+++ b/BMP.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Black Market Plantae</title>
+    <!--This is the supposed neighboring partner site Black Market Plantae which sells plants rather than animals. -->
+
+    <!--Below is some styles so that the image of the takedown covers most of the screen-->
     <style>
-    
         body, html {
             margin: 0;
-            
             background:radial-gradient(rgb(53, 0, 0),rgb(52, 5, 5));
             padding: 0;
             height: 100%;
-            overflow: hidden; /* Prevent scrolling */
+            overflow: hidden; 
         }
 
         img {
@@ -22,6 +23,7 @@
     </style>
 </head>
 <body>
+    <!--This is the image that will be covering the screen, and is very comedic.-->
     <img src="seized.jpg" alt="This site has been taken down by the United States Federal Government">
 </body>
 </html>
