Implemented all images needed. Added ai gen for all categories and added cart icon

--- a/BMP.html
+++ b/BMP.html
@@ -24,6 +24,6 @@
 </head>
 <body>
     <!--This is the image that will be covering the screen, and is very comedic.-->
-    <img src="seized.jpg" alt="This site has been taken down by the United States Federal Government">
+    <img src="Images/UI/seized.jpg" alt="This site has been taken down by the United States Federal Government">
 </body>
 </html>
