--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!--This is the useful dropdown menu so that the user can go to different spots on the page or different websites.-->
     <div class="dropdown">
         <div class="background-box"></div>
-        <img src="More.png" width="50" height="50" alt="Dropdown Menu" />
+        <img src="Images/UI/More.png" width="50" height="50" alt="Dropdown Menu" />
         <div class="dropdown-content">
             <a href="#Whatwedo">What we do</a>
             <a href="#Explore">What we sell</a>
@@ -20,6 +20,20 @@
             <a href="BMP.html">Visit Black Market Plantae</a> <!--Takes them to the neighbor website-->
         </div>
     </div>
+
+    <div class="cart-container">
+        <!-- This will be the cart button -->
+        <div class="cart">
+            <p id="itemsInCart"; style="margin: 0;">0</p>
+        </div>
+    
+        <div class="cart">
+            <div class="background-box" style="padding-inline: 20px;"></div>
+            <img src="Images/UI/shopping-cart.png" width="50" height="50" alt="Cart button" />  
+        </div>
+    </div>
+    
+
     <h1>Black Market Animalia</h1>
 </span>
 
@@ -48,27 +62,27 @@
         <!--Simple grid container for the different categories of animals that are sold and links to their assoicated page-->
     <div id="grid-container">
         <div class="item">
-            <a href="BlackMarketStock.html">
+            <a href="BlackMarketStock.html #GenMod">
                 <p>Genetically Modified</p> 
-                <img src="GeneticEngineering.jpg" alt="Button for viewing Genetic Creations">
+                <img src="Images/GenModImages/GeneticEngineering.jpg" alt="Button for viewing Genetic Creations">
             </a>
         </div>
         <div class="item">
-            <a href="BlackMarketStock.html">
+            <a href="BlackMarketStock.html#Alien">
                 <p>Alien</p> 
-                <img src="Alien1.jpg" alt="Button for viewing Alien Animals">
+                <img src="Images/AlienImages/Alien1.jpg" alt="Button for viewing Alien Animals">
             </a>
         </div>
         <div class="item">
-            <a href="BlackMarketStock.html">
+            <a href="BlackMarketStock.html#Stolen">
                 <p>Stolen</p> 
-                <img src="Stolen.jpg" alt="Button for viewing Stolen Animals">
+                <img src="Images/StolenImages/Stolen.jpg" alt="Button for viewing Stolen Animals">
             </a>
         </div>
         <div class="item">
-            <a href="BlackMarketStock.html">
+            <a href="BlackMarketStock.html#Extinct">
                 <p>Extinct</p> 
-                <img src="Extinct.jpg" alt="Button for viewing Extinct Animals">
+                <img src="Images/ExtinctImages/Extinct.jpg" alt="Button for viewing Extinct Animals">
             </a>
         </div>
 
