--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"> 
     <title>Black Market Animalia</title> <!--Title of the webpage-->
     <link href="Illicit.css" rel="stylesheet"> <!--Referencing the css sheet-->
-        
+    <script src="blackMarketScipts.js" defer></script>
 </head>
 
 <span >
