--- a/BlackMarketStock.html
+++ b/BlackMarketStock.html
@@ -61,16 +61,21 @@
                         <div class="grid-container-store">    
                                 <div class="item">
                                     <img id ="Joker.jpg" src="Images/GenModImages/GeneticEngineering2.jpg" alt = "generated picture 1" aria-colspan="1">
-                                    <p class="storeP">Price: 12 Btc</p>
-                                    <p class="storeP">This animal is crazy.</p> <!--I do not have a description yet-->
+                                    <p class="storeP">
+                                        Meet the fascinating Jellydog <br> A unique blend of humanity's beloved dog and the enigmatic jellyfish. These loyal companions create a shimmering field of jelly around them, providing an extra layer of protection and allure. With their playful spirit and mesmerizing presence, Jellydogs are not just pets; they are guardians of both heart and home.
+                                    </p>
+                                    <p class="storeP">Price: 3 Btc</p>
                                     <button class="addToCartBtn">Add to Cart</button>
 
                                 </div>
 
                                 <div class="item" >
                                     <img src="Images/GenModImages/GeneticEngineering3.jpg" alt = "generated picture 2">
-                                    <p class="storeP">Price: 14 Btc</p>
-                                    <p class="storeP">This animal is crazy.</p>
+                                    <p class="storeP">Meet the Golden Gull <br>
+                                         This breed embodies the best of both species with the friendly nature and playful retriever combined with the wings of a seagull. The Golden Gull is not just a pet, but a joyful companion that loves to play and make every day an adventure. Whether fetching a ball or soaring through the air, this breed will be perfect.
+                                    </p>
+                                    <p class="storeP">Price: 7 Btc</p>
+                                    <button class="addToCartBtn">Add to Cart</button>
                                 </div>
 
                                 <div class="item">
