Added descriptions to all ai gen images. Added Better UI and CSS

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <span >
         <!--This is the useful dropdown menu so that the user can go to different spots on the page or different websites.-->
     <div class="dropdown">
-        <div class="background-box"></div>
+        <div style="z-index: -1;" class="background-box"></div>
         <img src="Images/UI/More.png" width="50" height="50" alt="Dropdown Menu" />
         <div class="dropdown-content">
             <a href="#Whatwedo">What we do</a>
@@ -24,12 +24,12 @@
     <div class="cart-container">
         <!-- This will be the cart button -->
         <div class="cart">
-            <p id="itemsInCart"; style="margin: 0;">0</p>
+            <p id="itemsInCart"; style="margin: 0; z-index: 1;">0</p>
         </div>
     
         <div class="cart">
-            <div class="background-box" style="padding-inline: 20px;"></div>
-            <img src="Images/UI/shopping-cart.png" width="50" height="50" alt="Cart button" />  
+            <div class="background-box" style="padding-inline: 20px; z-index: -1;"></div>
+            <img id="itemsInCart" src="Images/UI/shopping-cart.png" width="50" height="50" alt="Cart button" />  
         </div>
     </div>
     
@@ -110,6 +110,8 @@
     <a href="">TOP</a>
     <p></p>
     <a href="BMP.html">Black Market Plantae</p>
+    <!--Add a security logo-->
+    <p>Secured by Animalia Marketplace</p>
 </footer>
 
 </html>
