--- a/BlackMarketCart.html
+++ b/BlackMarketCart.html
@@ -17,7 +17,6 @@
     </div>
 </div>
 
-
 <a href="BlackMarketCart.html">
     <div class="cart-container">
         <!-- This will be the cart button -->
@@ -33,14 +32,23 @@
 </a>
 
 <body>
+    <script src="blackMarketScipts.js"></script>
+    <h2>Shopping Cart</h2>
     <div class="container">
-        <h1>Your Shopping Cart</h1>
+        <p><a style="background-color: rgb(216, 210, 210);" href = "#paymentContainer">Checkout Now</a></p>
         <div id="cartItems"></div>
-        <div id="totalCost" class="total"></div>
-        <div id="paymentContainer"></div>
-        <button id="checkoutBtn">Checkout</button>
+
+        <p id="totalCost" class="total"></p>
+        <p style="font-size:smaller ;">Typical Wallet address: 1F1tAaz5x1HUXrCNLbtMDqcw6o5GNn4xqX</p>
+        <p id="paymentContainer"></p>
     </div>
 
-    <script src="blackMarketScipts.js"></script>
 </body>
+
+<!--This footer has a button to get to the top fast and a filler text-->
+<footer style="margin-top: 200px;">
+    <a href="">TOP</a>
+    <!--Add a security logo-->
+    <p>Secured by Animalia Marketplace</p>
+</footer>
 </html>
