Increased visibility to shop menu

--- a/BlackMarketCart.html
+++ b/BlackMarketCart.html
@@ -35,7 +35,7 @@
     <script src="blackMarketScipts.js"></script>
     <h2>Shopping Cart</h2>
     <div class="container">
-        <p><a style="background-color: rgb(216, 210, 210);" href = "#paymentContainer">Checkout Now</a></p>
+        <p><a class="checkout-button" style="background-color: rgb(216, 210, 210);" href = "#paymentContainer">Checkout Now</a></p>
         <div id="cartItems"></div>
 
         <p id="totalCost" class="total"></p>
