Added the security icon

--- a/BlackMarketCart.html
+++ b/BlackMarketCart.html
@@ -51,6 +51,6 @@
 <footer style="margin-top: 200px;">
     <a href="">TOP</a>
     <!--Add a security logo-->
-    <p>Secured by Animalia Marketplace</p>
+    <p>&#128274;Secured by Animalia Marketplace</p>
 </footer>
 </html>
