--- a/BlackMarketStock.html
+++ b/BlackMarketStock.html
@@ -261,7 +261,7 @@
     <footer>
         <a href="">TOP</a>
         <!--Add a security logo-->
-        <p>Secured by Animalia Marketplace</p>
+        <p>&#128274;Secured by Animalia Marketplace</p>
     </footer>
 
 
