--- a/index.html
+++ b/index.html
@@ -117,9 +117,10 @@
 <footer>
     <a href="">TOP</a>
     <p></p>
-    <a href="BMP.html">Black Market Plantae</p>
+    <a href="BMP.html">Black Market Plantae</a>
     <!--Add a security logo-->
-    <p>Secured by Animalia Marketplace</p>
+    <p>&#128274;Secured by Animalia Marketplace</p>
+
 </footer>
 
 </html>
