--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <a href="#Explore">What we sell</a>
             <a href="#Howwedo">How we do it</a>
             <a href="BlackMarketStock.html">View our Stock</a> <!--Takes them to the market page-->
+            <a href="#ContactUs">Want to contact us about listing an Animal?</a> <!--Takes them to
             <a href="BMP.html">Visit Black Market Plantae</a> <!--Takes them to the neighbor website-->
         </div>
     </div>
@@ -111,6 +112,13 @@
     <p>
         We are everywhere and nowhere, we are and we aren't. 
     </p>
+</p>
+
+<p>
+    <h2 id="ContactUs">Want to list your Animal?</h2>
+    <p>
+        Contact us at <a href="mailto:AnimaliaDealings@toremail.com">AnimaliaDealings@toremail.com</a>
+    </p>    
 </p>
 </body>
 
