Added autofill to email

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 <p>
     <h2 id="ContactUs">Want to list your Animal?</h2>
     <p>
-        Contact us at <a href="mailto:AnimaliaDealings@toremail.com">AnimaliaDealings@toremail.com</a>
+        Contact us at <a href="mailto:AnimaliaDealings@toremail.com?subject=Listing Inquiry&body=Greetings, I have something you might like listed...">AnimaliaDealings@toremail.com</a>
     </p>    
 </p>
 </body>
