Final Build Release

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <a href="#Explore">What we sell</a>
             <a href="#Howwedo">How we do it</a>
             <a href="BlackMarketStock.html">View our Stock</a> <!--Takes them to the market page-->
-            <a href="#ContactUs">Want to contact us about listing an Animal?</a> <!--Takes them to
-            <a href="BMP.html">Visit Black Market Plantae</a> <!--Takes them to the neighbor website-->
+            <a href="#ContactUs">Want to contact us about listing an Animal?</a>
+            <a href="BMP.html">Visit Black Market Plantae</a>  <!--Takes them to the neighbor website-->
         </div>
     </div>
 
