Added a spinner animation and streamlined ai generation

--- a/BlackMarketStock.html
+++ b/BlackMarketStock.html
@@ -92,8 +92,11 @@
                                     <p class="storeP">Price: 12 Btc</p>
                                     <button class="addToCartBtn">Add to Cart</button>
                                 </div>
-                                
-
+                                <!--This shows the loading sign when generating-->
+                                <div id="spinnerAlert1" class="spinner-modal" style="display:none;">
+                                    <div class="spinner"></div>
+                                    <p>Processing...</p>
+                                  </div>
                                 <div class = "item" id = "generateButtonClass" style="width: 200%; margin-bottom: 200dp;display: block; column-span: all;">
                                     <button id="generateButton1" style = "width:100%; ;height:50px; color: black; background-color: gray; display: inline-block; font-size: large; margin-bottom: 100dp;" >Load More</button>
                                 </div>
@@ -142,6 +145,11 @@
                                     <button class="addToCartBtn">Add to Cart</button>
                                 </div>
 
+                                <!--This shows the loading sign when generating-->
+                                <div id="spinnerAlert2" class="spinner-modal" style="display:none;">
+                                    <div class="spinner"></div>
+                                    <p>Processing...</p>
+                                  </div>  
                                 <div class = "item" id = "generateButtonClass2" style="width: 200%; margin-bottom: 200dp ;display: block; column-span: all;">
                                     <button id="generateButton2" style = "width:100%; ;height:50px; color: black; background-color: gray; display: inline-block; font-size: large; margin-bottom: 100dp;" >Load More</button>
                                 </div>
@@ -189,9 +197,14 @@
                                 <p class="storeP">Price: 9 Btc</p>
                                 <button class="addToCartBtn">Add to Cart</button>
                             </div>
-
-                            <div class = "item" id = "generateButtonClass3" style="width: 200%; margin-bottom: 200dp;display: block; column-span: all;">
-                                <button id="generateButton3" style = "width:100%; ;height:50px; color: black; background-color: gray; display: inline-block; font-size: large; margin-bottom: 100dp;" >Load More</button>
+                            
+                            <!--This shows the loading sign when generating-->
+                            <div id="spinnerAlert3" class="spinner-modal" style="display:none;">
+                                <div class="spinner"></div>
+                                <p>Processing...</p>
+                            </div>    
+                            <div class = "item" id = "generateButtonClass3" style="width: 200%; margin-bottom: 200dp;display: block; column-span: all;">                        
+                                   <button id="generateButton3" style = "width:100%; ;height:50px; color: black; background-color: gray; display: inline-block; font-size: large; margin-bottom: 100dp;" >Load More</button>
                             </div>
                             <div class="item" style="width: 200%; display: none;"> <!--This is the ai generated image, dispalay is none so it is hidden, Once generated, will become visible-->
                                 <img id="generated3" src="" alt = "generated picture 4" style="display: inline;">
@@ -237,9 +250,13 @@
                                     <p class="storeP">Price: 2 Btc</p>
                                     <button class="addToCartBtn">Add to Cart</button>
                                 </div>
-
-                            <div class = "item" id = "generateButtonClass4" style="width: 200%; margin-bottom: 200dp;display: block; column-span: all;">
-                                <button id="generateButton4" style = "width:100%; ;height:50px; color: black; background-color: gray; display: inline-block; font-size: large; margin-bottom: 100dp;" >Load More</button>
+                            <!--This shows the loading sign when generating-->
+                            <div id="spinnerAlert4" class="spinner-modal" style="display:none;">
+                                <div class="spinner"></div>
+                                <p>Processing...</p>
+                              </div>   
+                            <div class = "item" id = "generateButtonClass4" style="width: 200%; margin-bottom: 200dp;display: block; column-span: all;">                             
+                                  <button id="generateButton4" style = "width:100%; ;height:50px; color: black; background-color: gray; display: inline-block; font-size: large; margin-bottom: 100dp;" >Load More</button>
                             </div>
                             <div class="item" style="width: 200%; display: none;"> <!--This is the ai generated image, dispalay is none so it is hidden, Once generated, will become visible-->
                                 <img id="generated4" src="" alt = "generated picture 4" style="display: inline;">
